@@ -9,19 +9,18 @@ import lombok.SneakyThrows;
 import org.apache.lucene.search.DocIdSetIterator;
 import org.apache.lucene.util.BitSetIterator;
 import org.apache.lucene.util.FixedBitSet;
-import org.mockito.stubbing.OngoingStubbing;
 import org.opensearch.knn.KNNTestCase;
 import org.opensearch.knn.index.SpaceType;
 import org.opensearch.knn.index.vectorvalues.KNNFloatVectorValues;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 public class VectorIdsKNNIteratorTests extends KNNTestCase {
@@ -29,24 +28,33 @@ public class VectorIdsKNNIteratorTests extends KNNTestCase {
     public void testNextDoc_whenCalledWithFilters_thenIterateAllDocs() {
         final SpaceType spaceType = SpaceType.L2;
         final float[] queryVector = { 1.0f, 2.0f, 3.0f };
-        final int[] filterIds = { 1, 2, 3 };
-        final List<float[]> dataVectors = Arrays.asList(
+        final int[] filterIds = { 0, 2, 3 };
+        final Map<Integer, float[]> dataVectors = Map.of(
+            0,
             new float[] { 11.0f, 12.0f, 13.0f },
-            new float[] { 14.0f, 15.0f, 16.0f },
-            new float[] { 17.0f, 18.0f, 19.0f }
+            2,
+            new float[] { 17.0f, 18.0f, 19.0f },
+            3,
+            new float[] { 14.0f, 15.0f, 16.0f }
         );
-        final List<Float> expectedScores = dataVectors.stream()
-            .map(vector -> spaceType.getKnnVectorSimilarityFunction().compare(queryVector, vector))
-            .collect(Collectors.toList());
+        final Map<Integer, Float> expectedScores = dataVectors.entrySet()
+            .stream()
+            .collect(
+                Collectors.toMap(Map.Entry::getKey, e -> spaceType.getKnnVectorSimilarityFunction().compare(queryVector, e.getValue()))
+            );
 
         KNNFloatVectorValues values = mock(KNNFloatVectorValues.class);
-        when(values.getVector()).thenReturn(dataVectors.get(0), dataVectors.get(1), dataVectors.get(2));
-
         FixedBitSet filterBitSet = new FixedBitSet(4);
+        AtomicInteger lastReturned = new AtomicInteger(-1);
         for (int id : filterIds) {
-            when(values.advance(id)).thenReturn(id);
+            when(values.advance(id)).thenAnswer(inv -> {
+                int target = inv.getArgument(0);
+                lastReturned.set(target);
+                return target;
+            });
             filterBitSet.set(id);
         }
+        when(values.getVector()).thenAnswer(inv -> dataVectors.get(lastReturned.get()));
 
         // Execute and verify
         VectorIdsKNNIterator iterator = new VectorIdsKNNIterator(
@@ -55,9 +63,9 @@ public class VectorIdsKNNIteratorTests extends KNNTestCase {
             values,
             spaceType
         );
-        for (int i = 0; i < filterIds.length; i++) {
-            assertEquals(filterIds[i], iterator.nextDoc());
-            assertEquals(expectedScores.get(i), (Float) iterator.score());
+        for (int filterId : filterIds) {
+            assertEquals(filterId, iterator.nextDoc());
+            assertEquals(expectedScores.get(filterId), (Float) iterator.score());
         }
         assertEquals(DocIdSetIterator.NO_MORE_DOCS, iterator.nextDoc());
     }
@@ -66,6 +74,7 @@ public class VectorIdsKNNIteratorTests extends KNNTestCase {
     public void testNextDoc_whenCalledWithoutFilters_thenIterateAllDocs() {
         final SpaceType spaceType = SpaceType.L2;
         final float[] queryVector = { 1.0f, 2.0f, 3.0f };
+        int[] docs = { 0, 1, 2, 3, 4, Integer.MAX_VALUE };
         final List<float[]> dataVectors = Arrays.asList(
             new float[] { 11.0f, 12.0f, 13.0f },
             new float[] { 14.0f, 15.0f, 16.0f },
@@ -75,30 +84,31 @@ public class VectorIdsKNNIteratorTests extends KNNTestCase {
         );
         final List<Float> expectedScores = dataVectors.stream()
             .map(vector -> spaceType.getKnnVectorSimilarityFunction().compare(queryVector, vector))
-            .collect(Collectors.toList());
+            .toList();
 
         KNNFloatVectorValues values = mock(KNNFloatVectorValues.class);
-        when(values.getVector()).thenReturn(
-            dataVectors.get(0),
-            dataVectors.get(1),
-            dataVectors.get(2),
-            dataVectors.get(3),
-            dataVectors.get(4)
-        );
-        // stub return value when nextDoc is called
-        OngoingStubbing<Integer> stubbing = when(values.nextDoc());
-        for (int i = 0; i < dataVectors.size(); i++) {
-            stubbing = stubbing.thenReturn(i);
-        }
-        // set last return to be Integer.MAX_VALUE to represent no more docs
-        stubbing.thenReturn(Integer.MAX_VALUE);
+        AtomicInteger lastReturned = new AtomicInteger(-1);
+        when(values.advance(anyInt())).thenAnswer(invocation -> {
+            int target = invocation.getArgument(0);
+            int prev = lastReturned.get();
+            assertTrue(prev < target);
+            for (int doc : docs) {
+                if (doc >= target) {
+                    lastReturned.set(doc);
+                    return doc;
+                }
+            }
+            lastReturned.set(Integer.MAX_VALUE);
+            return Integer.MAX_VALUE;
+        });
+        when(values.getVector()).thenAnswer(inv -> dataVectors.get(lastReturned.get()));
+
         // Execute and verify
-        VectorIdsKNNIterator iterator = new VectorIdsKNNIterator(queryVector, values, spaceType);
+        VectorIdsKNNIterator iterator = new VectorIdsKNNIterator(DocIdSetIterator.range(0, 5), queryVector, values, spaceType);
         for (int i = 0; i < dataVectors.size(); i++) {
             assertEquals(i, iterator.nextDoc());
             assertEquals(expectedScores.get(i), (Float) iterator.score());
         }
         assertEquals(DocIdSetIterator.NO_MORE_DOCS, iterator.nextDoc());
-        verify(values, never()).advance(anyInt());
     }
 }
